<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="0dp"
    android:background="@drawable/pozadina">

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="156dp"
        android:background="@color/green_with_opacity"
        android:fontFamily="serif"
        android:text="@string/ProstorZaCitat"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="italic|bold"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <Button
        android:id="@+id/buttonMojdan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/green"
        android:fontFamily="serif"
        android:text="@string/Btn_Dan"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonSituacije"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/green"
        android:fontFamily="serif"
        android:text="@string/Situacije"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMojdan" />

    <Button
        android:id="@+id/buttonGlazba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="47dp"
        android:backgroundTint="@color/green"
        android:fontFamily="serif"
        android:text="Glazbeni Kutak"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSituacije" />

    <Button
        android:id="@+id/buttonProsliDani"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/green"
        android:fontFamily="serif"
        android:text="Moji prošli dani"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGlazba" />

</androidx.constraintlayout.widget.ConstraintLayout>